--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,59 @@
-.App {
-  text-align: center;
+*, body {
+  margin: 0;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.hewwo {
+  border-radius: 0 !important;
+  width: 100%;
+  max-height: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login {
+  align-self: center;
+  background-color: #151515;
+  width: 20rem;
+  max-height: 45%;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.flex {
+  display:flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+/*  this is for the login inputs */
+.logins {
+  max-height: 30%;
+  width: 80%;
+  align-self: center;
+  margin: 10px;
+}
+
+.justify-content-around {
+      justify-content: space-around;
+}
+
+#logo {
+max-height: 20%;
+display: flex;
+flex-direction: column;
+}
+
+#loginLogo {
+  margin-top: 20px;
 }
